# DoTLMViz

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
DoTLMViz/transformers/: attention.py  embedding.py  layernorm.py  mlp.py  transformer.py
backend/: __init__.py  ckpt.py  embed.py  utils.py
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html  callbacks.svelte.ts  state.svelte.ts
frontend/src/components/: DropDown.svelte  ThemeInputSlider.svelte
frontend/src/dataviz/: BarChart.svelte
frontend/src/lib/: content.ts  types.ts
frontend/src/modules/: Controls.svelte  EmbeddingBlock.svelte  OutputBlock.svelte  TokensBlock.svelte  TransformerBlocks.svelte  UnembeddingBlock.svelte
frontend/src/readings/: decoding.md  external-links.md  input-encoding-component.md  language-modeling-head.md  overview.md  residual-stream.md  token-embedding.md  transformer-blocks.md
frontend/src/routes/: +layout.svelte  +page.svelte  fetch.svelte.ts
frontend/src/routes/api/readings/: +server.ts
frontend/src/routes/readings/: +layout.server.ts  +layout.svelte  +page.server.ts
frontend/src/routes/readings/[slug]/: +page.svelte  +page.ts
src/: App.svelte
src/DoTLMViz/decomposition/: utils.py
src/lib/: ButtonOverlay.svelte  Overlay.svelte
