[project]
name = "DoTLMViz"
version = "0.1"
dependencies = [
    "einops",
    "jaxtyping",
    "mkdocs",
    "mkdocstrings-python",
    "mkdocs-material",
    "pre-commit",
    "pytest",
    "ruff"
]

[project.urls]
Repository = "https://github.com/Arktetra/DoTLMViz.git"

[tool.setuptools]
packages = ["DoTLMViz"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E722", "E731", "F722"]
